fix: align post comment and attach media btn, center modal content & edit idea form population, dustbin delete icon

--- a/ui/src/app/Components/buttons/buttons.component.scss
+++ b/ui/src/app/Components/buttons/buttons.component.scss
@@ -222,9 +222,9 @@
 }
 
 .btn-delete {
-  background: #ff4d4d;
-  color: white;
-  border: none;
+  background: #fff;
+  color: red;
+  border: 1px solid purple;
   padding: 6px 10px;
   border-radius: 6px;
   width: auto;
